assets/css/index.css
@import "reset.css";
@import "semantics.css";

main p:first-child {
    padding: 0.8% 0% 0.8% 7%;
    background-color: #21242d;
    color: #ffff;
    font-size: 1.08rem;
}

main section {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap: 1rem;

    background-image: url('../images/background-gym.jpg');
    background-size: cover;
    background-repeat: no-repeat;

    min-height: 80vh;

    color: #ffff;
}


main section h2 {
    font-size: 2.2rem;
    text-shadow: 0 0 2rem rgb(0,0,0);

}

main section p {
    font-size: 1.2rem;
    text-shadow: 0 0 1rem rgb(0,0,0);

}

main section button {
    width: 9.5rem;
    height: 2.5rem;
    border: 0;
    background-color: #ca2628;
    color: #ffff;
    font-size: 1.1rem;
}

